# archspec

./: .gitignore  .gitmodules  .readthedocs.yml  CITATION.cff  Dockerfile  LICENSE-MIT  README.md  pyproject.toml  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: cli.yml  codeql-analysis.yml  property_tests.yml  stale.yml  unit_tests.yml
archspec/: __init__.py  cli.py
archspec/cpu/: __init__.py  alias.py  cpu_info_from_cpuid.py  cpuid.py  cpuid_flags.json  detect.py  microarchitecture.py  schema.py
archspec/interconnect/: __init__.py  detect.py
docs/: requirements.txt
docs/source/: apidocs.rst  conf.py  getting_started.rst  index.rst  microarchitectures.rst
tests/: __init__.py  conftest.py  test_archspec.py  test_cli.py  test_cpu.py
tests/property/: conftest.py  test_microarchitecture.py
tests/unit/: test_archspec.py  test_cli.py  test_cpu.py
