[tool.poetry]
name = "archspec"
version = "0.2.0"
description = "A library to query system architecture"
license = "Apache-2.0 OR MIT"
authors = ["archspec developers <maintainers@spack.io>"]
maintainers = [
    "Greg Becker <maintainers@spack.io>",
    "Massimiliano Culpo <massimiliano.culpo@gmail.com>",
    "Todd Gamblin <maintainers@spack.io>",
    "Kenneth Hoste <kenneth.hoste@ugent.be>"
]
repository = "https://github.com/archspec/archspec.git"
homepage = "https://github.com/archspec/archspec"
documentation = "https://archspec.readthedocs.io"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix"
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8"

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-cov = "^4"
jsonschema = "^4"
pylint = "^2"
flake8 = "^5"
black = [
    { version = "^22.0.0", python = "^3.8" }
]

[tool.poetry.scripts]
archspec = 'archspec.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
