[tool.poetry]
name = "archspec"
version = "0.2.5"
description = "A library to query system architecture"
license = "Apache-2.0 OR MIT"
authors = ["archspec developers <maintainers@spack.io>"]
maintainers = [
    "Greg Becker <maintainers@spack.io>",
    "Massimiliano Culpo <massimiliano.culpo@gmail.com>",
    "Todd Gamblin <maintainers@spack.io>",
    "Kenneth Hoste <kenneth.hoste@ugent.be>"
]
repository = "https://github.com/archspec/archspec.git"
homepage = "https://github.com/archspec/archspec"
documentation = "https://archspec.readthedocs.io"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix"
]
include = [
    { path = "tests", format = "sdist"}
]
exclude = [
    "archspec/json/.git" ,
    "archspec/json/.github" ,
]

[tool.poetry.dependencies]
python = "3.6.15 || ^3.7"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = [
    { version = "^7", python = "==3.7" },
    { version = "^8", python = "^3.8" }
]
pytest-cov = { version = "^4", python = "^3.7" }
jsonschema = { version = "^4", python = "^3.7" }
typing-extensions = { version = "==4.7.1", python = "==3.7"}

[tool.poetry.group.linters]
optional = true

[tool.poetry.group.linters.dependencies]
pylint = { version = "^3", python = "^3.8" }
flake8 = { version = "^7", python = "^3.8.1" }
black = { version = "^24", python = "^3.8" }
isort = { version = "^5", python = "^3.8" }

[tool.isort]
profile = "black"
skip_glob = "archspec/vendor/*"

[tool.black]
line-length = 99
target-version = ['py36', 'py37', 'py38', 'py39', 'py310', 'py311', 'py312']
extend-exclude = """
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  ^/archspec/vendor
)
"""

[tool.poetry.scripts]
archspec = 'archspec.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
